--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@vercel/analytics": "^1.5.0",
 		"lucide-svelte": "^0.475.0",
 		"mode-watcher": "^0.5.1",
 		"svelte-motion": "^0.12.2"
