--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 	},
 	"dependencies": {
 		"@vercel/analytics": "^1.5.0",
+		"@vercel/speed-insights": "^1.2.0",
+		"i": "^0.3.7",
 		"lucide-svelte": "^0.475.0",
 		"mode-watcher": "^0.5.1",
 		"svelte-motion": "^0.12.2"
