--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/typography": "^0.5.16",
+		"@types/cors": "^2.8.17",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^1.1.0",
 		"clsx": "^2.1.1",
@@ -44,6 +45,7 @@
 		"@google/generative-ai": "^0.21.0",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
+		"cors": "^2.8.5",
 		"i": "^0.3.7",
 		"lucide-svelte": "^0.475.0",
 		"mode-watcher": "^0.5.1",
